# Triality-test-suite

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v11.1.md  SECURITY.md  generate_file.py  mkdocs.yml  overview.md  pyproject.toml  run_demo.py  triad_test.csv  triality_adaptive_ranked.csv  triality_adaptive_results.csv  triality_focused_results.csv  triality_sweep_results.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  smoke.yml
analysis/: __init__.py  bispec_peaks.py  bispectrum.py  detuning_aggregate.py  event_binning.py  jpc_batch.py  jpc_lock_batch.py  load_timeseries.py  plot_adaptive.py  plot_bispec_with_peak.py  plot_focused.py  plot_sweep.py  plv_pac.py  power_calc.py  report_universality.py  run_bispec.py  run_jpc.py  run_plots.py  run_timetags.py  spdc_batch.py  stats_plan.md  surrogates.py  synth_timetags.py  synth_triad.py  triad_lock.py  triad_phase_reduction.ipynb
analysis/configs/: jpc_detuning_meta.json  (+4 more)
control/: __init__.py  closed_loop.py
cosmo/: __init__.py  toy.py
docs/: api.md  discipline.md  index.md  replicate.md  theory.md
env/: environment.yml  requirements.txt
model/: __init__.py  drive.py  lagrangian.py
neuro/: __init__.py  dosimetry.md  protocol.md
scripts/: get_started.ps1  get_started.sh  run_replication.ps1  run_replication.sh
sim/: __init__.py  pde1d.py  pde_solver.py
sweeps/: __init__.py  adaptive_search.py  focused_sweep.py  param_sweep.py
tests/: __init__.py  test_basic.py
(+2 files in other folders)
