
[project]
name = "triality"
version = "0.1.0"
description = "Triality tri-field scaffold with simulations and protocols"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
